--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,23 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>lee.study</groupId>
-    <artifactId>http-proxy</artifactId>
+    <artifactId>proxyee</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <packaging>jar</packaging>
 
-    <name>http-proxy</name>
+    <name>proxyee</name>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -22,6 +34,13 @@
             <artifactId>netty-all</artifactId>
             <version>4.1.15.Final</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on -->
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>1.49</version>
+        </dependency>
+
 
     </dependencies>
 </project>
