--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ pom.properties
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-.idea/libraries/
-.idea/workspace.xml
+.idea/
+*.iml
 
 target/
