--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,17 @@
             <artifactId>bcpkix-jdk15on</artifactId>
             <version>1.58</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.30</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>2.13.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <profiles>
