--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
     <developers>
         <developer>
             <name>monkeyWie</name>
-            <email>liwei2633@163.com</email>
+            <email>liwei-8466@qq.com</email>
         </developer>
     </developers>
 
