--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,9 @@ jobs:
           gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }} # Value of the GPG private key to import
           gpg-passphrase: ${{ secrets.MAVEN_GPG_PASSPHRASE }} # env variable for GPG private key passphrase
 
+      - name: Debug gpg
+        run: gpg --list-secret-keys --keyid-format LONG
+
       - name: Publish to Apache Maven Central
         run: mvn clean deploy -P release
         env:
