--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.github.monkeywie</groupId>
     <artifactId>proxyee</artifactId>
-    <version>1.3.1</version>
+    <version>1.3.2-alpha</version>
     <build>
         <plugins>
             <plugin>
