--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.github.monkeywie</groupId>
     <artifactId>proxyee</artifactId>
-    <version>1.6.5</version>
+    <version>1.6.6-SNAPSHOT</version>
 
     <packaging>jar</packaging>
 
@@ -38,7 +38,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
-        <netty.version>4.1.71.Final</netty.version>
+        <netty.version>4.1.78.Final</netty.version>
     </properties>
 
     <dependencies>
