--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.github.monkeywie</groupId>
     <artifactId>proxyee</artifactId>
-    <version>1.6.6-SNAPSHOT</version>
+    <version>1.6.6</version>
 
     <packaging>jar</packaging>
 
