--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -11,3 +11,5 @@
 #otechie: # Replace with a single Otechie username
 #custom: # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
 github: monkeyWie
+ko_fi: https://ko-fi.com/monkeywie
+custom: 
