--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -10,6 +10,6 @@
 #issuehunt: # Replace with a single IssueHunt username
 #otechie: # Replace with a single Otechie username
 #custom: # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
-github: monkeyWie
-ko_fi: https://ko-fi.com/monkeywie
-custom: 
+# github: monkeyWie
+ko_fi: monkeywie
+custom: https://github.com/monkeyWie/proxyee/blob/master/.donate/index.md
